# very-stupid-ai-constantly-committing

./: .gitignore  README.md  TODO.md  bot_guardian.py  config.example.json  install_autostart_task.ps1  pyproject.toml  run_forever.ps1
self_improver/: TODO.md  __init__.py  __main__.py  cli.py  config.py  memory.py  ollama.py  patcher.py  policy.py  repo.py  supervisor.py  todo.py  utils.py  validator.py
tests/: test_memory.py  test_patcher.py  test_policy.py  test_supervisor.py  test_todo.py  test_utils.py
